Bug 164098 - Typing tatweel character leads to a crash
Summary: Typing tatweel character leads to a crash
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.2.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash Kashida-Justification, Tatweel
  Show dependency treegraph
 
Reported: 2024-11-29 21:29 UTC by Hossein
Modified: 2024-12-06 10:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example with several tatweel characters (16.49 KB, application/vnd.oasis.opendocument.text)
2024-11-29 21:29 UTC, Hossein
Details
bt (328.34 KB, text/plain)
2024-11-30 11:46 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2024-11-29 21:29:11 UTC
Created attachment 197871 [details]
Example with several tatweel characters

Description:
When typing tatweel (manual kashida) character (ـ) in LibreOffice writer, sometimes it leads to a crash.

Steps to Reproduce:
1. Open attachment
2. Type some tatweel character in line 4 of the text, which contains a huge line of tatweel character (ـ). You may copy and paste from the text itself.

Actual Results:
LibreOffice Writer crashes

Expected Results:
LibreOffice Writer should not crash

Reproducible: Always


User Profile Reset: No


Additional Info:
Reproducible with the latest LO 25.2 dev master (debug):
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 0090640f882309f1ad07466054fb29b0ed10cb6f
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The crash does not happen with LO 24.8 release:
Version: 24.8.3.2 (X86_64) / LibreOffice Community
Build ID: 48a6bac9e7e268aeb4c3483fcf825c94556d9f92
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Marina Latini (SUSE) 2024-11-29 23:08:12 UTC
Doesn't crash with:

Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 480(Build:2)
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_GB.UTF-8); UI: en-US
Calc: threaded


Crash with: 

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: eaef1432bd0799bbed8dcbd6286942ed1d54ad90
CPU threads: 8; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 2 Julien Nabet 2024-11-30 11:46:58 UTC
Created attachment 197874 [details]
bt

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Commit Notification 2024-12-02 21:18:44 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94afced0195ef824e575176e33c79ca57484cd5c

tdf#164098 sw: Fix word overflow kashida justification crash

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Hossein 2024-12-03 08:53:38 UTC
Thanks Jonathan,
Confirming the fix with:
Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 9a14a0fd8b4227b5d08b3154cddca46f82ec2a03
CPU threads: 12; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded